--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.application.name=lab5
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/task_app
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.datasource.hikari.auto-commit=false
 
 server.servlet.session.timeout=15m
